Add second action to remove the `.npmrc`
After installing their dependencies, consumers of this action should be
able to easily remove the created `.npmrc` file again. This makes sure
that the access tokens are not leaked in subsequent workflow steps.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,20 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: add-action-metadata-file
-      - id: npmrc
-        name: Use local action to test it
-        uses: Qualifyze/create-npmrc-action@add-action-metadata-file
+          fetch-depth: 2
+      - name: Use local action to create .npmrc
+        uses: ./create
         with:
           token: "notreallyatoken"
+      - name: Make sure it contains the token
+        shell: bash
+        run: |
+          cd ~
+          grep -o "notreallyatoken" .npmrc | wc -l
+      - name: Use local action to remove .npmrc
+        uses: ./remove
+      - name: Make sure the token is removed
+        shell: bash
+        run: |
+          cd ~
+          ! grep -o "notreallyatoken" .npmrc | wc -l
